--- a/alacritty/colors.yml
+++ b/alacritty/colors.yml
@@ -2,7 +2,8 @@ schemes:
 # Colors (Gruvbox Material Dark Medium)
   gruvbox_material_dark_medium: &gruvbox_material_dark_medium
     primary:
-      background: '0x282828'
+      # background: '0x282828' lighter background
+      background: '0x1d2021'
       foreground: '0xdfbf8e'
 
     normal:
@@ -24,6 +25,32 @@ schemes:
       magenta: '0xd3869b'
       cyan:    '0x89b482'
       white:   '0xdfbf8e'
+
+# Colors (Gruvbox dark)
+  gruvbox_dark_hard: &gruvbox_dark_hard
+      primary:
+        background: '0x1d2021'
+        foreground: '0xebdbb2'
+
+      normal:
+        black:   '0x282828'
+        red:     '0xcc241d'
+        green:   '0x98971a'
+        yellow:  '0xd79921'
+        blue:    '0x458588'
+        magenta: '0xb16286'
+        cyan:    '0x689d6a'
+        white:   '0xa89984'
+
+      bright:
+        black:   '0x928374'
+        red:     '0xfb4934'
+        green:   '0xb8bb26'
+        yellow:  '0xfabd2f'
+        blue:    '0x83a598'
+        magenta: '0xd3869b'
+        cyan:    '0x8ec07c'
+        white:   '0xebdbb2'
 
 # Colors (Everforest)
   everforest_dark_medium: &everforest_dark_medium
@@ -54,3 +81,4 @@ schemes:
 # Apply
 # colors: *everforest_dark_medium
 colors: *gruvbox_material_dark_medium
+# colors: *gruvbox_dark_hard
