--- a/alacritty/colors.yml
+++ b/alacritty/colors.yml
@@ -78,7 +78,35 @@ schemes:
       cyan:    '#83c092'
       white:   '#d3c6aa'
 
+  tommorow-night-bright: &tommorow-night-bright
+    # Default colors
+    primary:
+      background: '#000000'
+      foreground: '#eaeaea'
+  
+    # Normal colors
+    normal:
+      black:   '#000000'
+      red:     '#d54e53'
+      green:   '#b9ca4a'
+      yellow:  '#e6c547'
+      blue:    '#7aa6da'
+      magenta: '#c397d8'
+      cyan:    '#70c0ba'
+      white:   '#424242'
+  
+    # Bright colors
+    bright:
+      black:   '#666666'
+      red:     '#ff3334'
+      green:   '#9ec400'
+      yellow:  '#e7c547'
+      blue:    '#7aa6da'
+      magenta: '#b77ee0'
+      cyan:    '#54ced6'
+      white:   '#2a2a2a'
 # Apply
 # colors: *everforest_dark_medium
-colors: *gruvbox_material_dark_medium
+# colors: *gruvbox_material_dark_medium
 # colors: *gruvbox_dark_hard
+colors: *tommorow-night-bright
