configs are dumb

--- a/nvim/snippets/package.json
+++ b/nvim/snippets/package.json
@@ -59,8 +59,11 @@
       {
         "language": "cpp",
         "path": "./cpp.json"
-      }
-      
+      },
+      {
+        "language": "typescriptreact",
+        "path": "./html.json"
+      },
     ]
   }
 }
